icons properly working

--- a/views/hey.jade
+++ b/views/hey.jade
@@ -8,11 +8,11 @@ block content
         p 
         input(type="submit" id="cityButton" value="Find City")
     p.title Todays Weather in:
-    div.containers
+    div.container
         p#city.city
+        img.icon#icon
         p#temperature
         p#description 
-        p#icon 
     script(type="text/javascript" src="javascripts/dom.js").
     
     
