--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,4 @@
+@import url(https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css);
 body {
   /* padding: 50px; */
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -11,7 +12,7 @@ a {
   font-size: 30px;
   font-weight: bold;
 }
-.containers{
+.container{
   background-color: aqua;
   width: 200px;
   text-align: center;
