added the star favorite element

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,8 @@
 @import url(https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css);
-body {
+body{
   /* padding: 50px; */
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: rgb(147, 248, 255);
+  background-color: rgb(147, 248, 255)!important;
 }
 
 a {
@@ -14,10 +14,10 @@ a {
 }
 .container{
   background-color: aqua;
-  width: 200px;
-  display:auto;
-  position: relative;
-  left: 550px;
+  width: 250px!important;
+  display: auto !important;;
+  display: flex;
+  margin:auto;
 }
 .title{
   text-align: center;
@@ -30,13 +30,15 @@ a {
   padding-top: 50px;
 }
 .checked{
-  color: yellow;
+  color: rgb(218, 218, 140);
 }
 #star{
   font-size: 25px;
-  padding: 5px;
+  padding: 10px;
+  height: 10px;
   
 }
 .items{
-  text-align: center;
+  text-align: center!important;
+  padding: 5px;
 }
