adding styling to website

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,7 @@ body{
   /* padding: 50px; */
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background-color: rgb(147, 248, 255)!important;
+  padding-bottom: 25px ;
 }
 
 a {
@@ -13,11 +14,14 @@ a {
   font-weight: bold;
 }
 .container{
-  background-color: aqua;
+  background-color: rgb(253, 255, 255);
   width: 250px!important;
   display: auto !important;;
   display: flex;
   margin:auto;
+  border-radius: 25px;
+  box-shadow: 0 10px 10px rgba(57, 66, 66, 0.4);
+  
 }
 .title{
   text-align: center;
@@ -25,12 +29,8 @@ a {
   font-weight: bold;
   
 }
-.input{
-  padding-left: 50px;
-  padding-top: 50px;
-}
 .checked{
-  color: rgb(218, 218, 140);
+  color: rgb(235, 128, 42);
 }
 #star{
   font-size: 25px;
@@ -41,4 +41,14 @@ a {
 .items{
   text-align: center!important;
   padding: 5px;
+}
+.logo{
+  margin: 25px 50px 50px 50px;
+  font-weight: bold;
+}
+.input{
+  margin: 50px 50px 50px 50px;
+}
+.icon{
+  width: 80px;
 }
