--- a/views/index.jade
+++ b/views/index.jade
@@ -1,9 +1,7 @@
 extends layout
 
 block content
-    
-    h1 Weather APP
-    p Welcome to #{title}
+    h1.logo Weatherly 
     div.input
         p Look up a city!
         p
