--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,19 +14,18 @@ a {
   font-weight: bold;
 }
 .container{
-  background-color: rgb(253, 255, 255);
+  background-color: rgb(236, 241, 241);
   width: 250px!important;
-  display: auto !important;;
-  display: flex;
-  margin:auto;
   border-radius: 25px;
   box-shadow: 0 10px 10px rgba(57, 66, 66, 0.4);
-  
+  visibility: hidden;
+
 }
 .title{
   text-align: center;
   font-size: 35px;
   font-weight: bold;
+  visibility: hidden;
   
 }
 .checked{
@@ -39,8 +38,7 @@ a {
   
 }
 .items{
-  text-align: center!important;
-  padding: 5px;
+  text-align: center;
 }
 .logo{
   margin: 25px 50px 50px 50px;
