--- a/views/index.jade
+++ b/views/index.jade
@@ -8,12 +8,12 @@ block content
         input(type="submit" id="cityButton" value="Find City")
     p.title Today's Weather in:
     div.container
-        span.fa.fa-star#star
+        //- span.fa.fa-star.star
         div.items
             p#city.city
             img.icon#icon
             p#temperature
             p#description 
-    div.favorites 
-        h2.fav Favorites
+    //- div.favorites 
+    //-     h2.fav Favorites
     script(type="text/javascript" src="javascripts/dom.js").
