added items to container

--- a/views/index.jade
+++ b/views/index.jade
@@ -13,7 +13,11 @@ block content
             p#city.city
             img.icon#icon
             p#temperature
+            p#temp_max
+            p#temp_min
+            p#feels
             p#description 
+            p#wind 
     //- div.favorites 
     //-     h2.fav Favorites
     script(type="text/javascript" src="javascripts/dom.js").
