--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,12 +10,12 @@ a {
   color: #98d2e9;
 }
 .city{
-  font-size: 30px;
+  font-size: 35px;
   font-weight: bold;
 }
 .container{
   background-color: rgb(236, 241, 241);
-  width: 250px!important;
+  width: 350px!important;
   border-radius: 25px;
   box-shadow: 0 10px 10px rgba(57, 66, 66, 0.4);
   visibility: hidden;
@@ -45,7 +45,8 @@ a {
   font-weight: bold;
 }
 .input{
-  margin: 50px 50px 50px 50px;
+  text-align: center;
+  padding-bottom: 50px;
 }
 .icon{
   width: 80px;
